feature section done

--- a/index.html
+++ b/index.html
@@ -41,13 +41,53 @@
                 <img src="images/team4.png" alt="">
 
             </div>
-            
+
 
             <div class="feature-content">
                 <h3 class="feature-title">Quick list of Our Features</h3>
-                <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
+        </section>
+
+        <!-- Main feature content -->
+        <section class="main-feature">
+            <div class="main-feature-content">
+                <h3 class="main-feature-title">Features you will love & enjoy</h3>
+                <p class="main-feature-description">There are many variations of passages of Lorem Ipsum available, but
+                    the majority have suffered alteration in some form, by injected humour, or randomised words which
+                    don't look even</p>
+                <div class="card">
+                    <h4 class="card-title">Dexktop & Mobile Version</h4>
+                    <p class="card-description">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h4 class="card-title">Drag & Drop Builder</h4>
+                    <p class="card-description">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h4 class="card-title">Awesome Modern Design</h4>
+                    <p class="card-description">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h4 class="card-title">Super Easy to Edit</h4>
+                    <p class="card-description">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+
+            </div>
+            <div class="main-feature-img"><img src="images/architect.png" alt="">
+                <div class="ten-years-badge">
+                    <h2>10+ years</h2>
+                    <p>Experience</p>
+                </div>
+            </div>
+            
         </section>
     </main>
 </body>
