Make till sponssors, and responsive few also

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         </div>
     </header>
     <main>
+        <!-- Normal feature section here -->
         <section class="feature-section">
             <div class="img-container">
                 <img src="images/team1.png" alt="">
@@ -88,6 +89,51 @@
                 </div>
             </div>
             
+        </section>
+       
+        <!-- facts section -->
+        <section class="facts">
+            <h3 class="facts-title">Some facts</h3>
+            <p class="facts-description">There are many variations of passages of Lorem Ipsum available, <br>but the majority have suffered alteration.</p>
+
+            <!-- facts card container -->
+            <div class="facts-card-container">
+                <div class="card">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h2 class="card-stats">54</h2>
+                    <p class="card-title">Award winning</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/projects.png" alt="">
+                    <h2 class="card-stats">54851</h2>
+                    <p class="card-title">Projects finished</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/customers.png" alt="">
+                    <h2 class="card-stats">560</h2>
+                    <p class="card-title">Clients work</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/email.png" alt="">
+                    <h2 class="card-stats">454512</h2>
+                    <p class="card-title">Email send</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Sponsors section -->
+        <section class="sponsors">
+            <div class="sponsors-container">
+                <h3 class="sponsors-title">Our sponsors</h3>
+                <p class="sponsors-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                <div class="sponsors-img-container">
+                    <img src="images/sponsors/google.png" alt="">
+                    <img src="images/sponsors/spotify.png" alt="">
+                    <img src="images/sponsors/figma.png" alt="">
+                    <img src="images/sponsors/amazon.png" alt="">
+                    <img src="images/sponsors/telerama.png" alt="">
+                </div>
+            </div>
         </section>
     </main>
 </body>
