--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
-                <li><a href="">Contact info</a></li>
+                <li><a href="">Contact</a></li>
                 <li><a href="">Login</a></li>
             </ul>
         </nav>
@@ -136,6 +136,10 @@
             </div>
         </section>
     </main>
+
+    <footer>
+        <p>All rights reserved copyright@2023 startup landing page design</p>
+    </footer>
 </body>
 
 </html>
